# db/queries/models.go
@@ -160,6 +160,17 @@ type ServicePort struct {
 	Purpose       string
 }
 
+type StoragePool struct {
+	ID          string
+	NodeID      string
+	Name        string
+	Directory   string
+	Path        string
+	State       string
+	OperationID *string
+	CreatedAt   pgtype.Timestamptz
+}
+
 type Template struct {
 	ID         string
 	Definition []byte
